fixed edit details button layout on tablet and mobile

--- a/sass/components/_project-plans.scss
+++ b/sass/components/_project-plans.scss
@@ -8,3 +8,33 @@
         }
     }
 }
+
+.project-details-controls:not(.fc-d-none){
+    overflow: hidden;
+
+    @include lg{
+        display: flex;
+        margin-bottom: 30px;
+    }
+
+    @include xs{
+        display: block;
+    }
+
+    .btn-fc{
+        margin-left: 16px;
+        @include lg{
+            margin: 0 20px 0 0;
+        }
+
+        @include xs{
+            margin-right: 0;
+            margin-bottom: 16px;
+        }
+
+        &:last-child{
+            margin-right: 0;
+            margin-bottom: 0;
+        }
+    }
+}
